# data-filtration-for-code-generation

./: README.md  compare_models.ipynb  evaluation.ipynb  filtering_examples.ipynb  finetune.ipynb  pyproject.toml
evaluation/: __init__.py  evaluation.py
filtering/: __init__.py  filtering.py  scores.py
filtering/prompts_template/: system_prompt_ice_score_correctness.txt  system_prompt_ice_score_usefulness.txt
training/: training.py
